# flexipc

./: .gitignore  CMakeLists.txt  FlexIPC.md  Makefile  README.md  config.cmake  docker_build.sh
documents/: IRQ_ARM.md  USB_Driver.md  boot.md  gdb.md  hikey970.md  object.md  perf.md  sched.md  thread.md
kernel/arch/aarch64/: CMakeLists.txt  head.S  main.c
kernel/arch/aarch64/irq/: esr.h  ipi.c  irq_entry.S  irq_entry.c  irq_entry.h  pgfault.c
kernel/arch/aarch64/machine/: pmu.c  smp.c
kernel/arch/aarch64/mm/: bzero.S  cache.c  memcpy.S  memmove.S  memset.c  mmparse.c  page_table.S  page_table.c  page_table.h  uaccess.c  vmspace.c
kernel/arch/aarch64/plat/hikey970/: CMakeLists.txt
kernel/arch/aarch64/plat/hikey970/irq/: irq.c  timer.c
kernel/arch/aarch64/plat/hikey970/uart/: uart.c
kernel/arch/aarch64/plat/raspi3/: CMakeLists.txt
kernel/arch/aarch64/plat/raspi3/irq/: irq.c  timer.c
kernel/arch/aarch64/plat/raspi3/uart/: uart.c
kernel/arch/aarch64/sched/: context.c  fpu.c  sched.c
kernel/arch/aarch64/sync/: rwlock.c  ticket.c  ticket.h
kernel/arch/x86_64/: CMakeLists.txt  main.c
kernel/arch/x86_64/irq/: ipi.c  irq_entry.S  irq_entry.c  irq_entry.h  pgfault.c  syscall.c  x2apic.c
kernel/arch/x86_64/machine/: cpu.c  smp.c  tsc.c  uart.c  xsave.h
kernel/arch/x86_64/mm/: memop.c  mmparse.c  multiboot.h  page_table.c  page_table.h  tlb.c  uaccess.c  vmspace.c
kernel/arch/x86_64/plat/intel/: CMakeLists.txt  pkey.c
kernel/arch/x86_64/sched/: context.c  extended_state.c  idle.S  sched.c
kernel/arch/x86_64/sync/: rwlock.c  ticket.c
scripts/: build_hikey.sh  chcore_basic_tests.exp  chcore_hikey_basic.exp  chcore_hikey_perf.exp  chcore_hikey_tests.exp  chcore_perf_tests.exp  chcore_sys_tests.exp  docker_fastbuild.sh  docker_fullbuild.sh  expect_wrapper.sh  gdb.py  (+6 more)
tests/common/: CMakeLists.txt  test.h  test_hashtable.c  test_list.c  test_radix.c  test_redef.h  test_user_radix.c
tests/dtb/: CMakeLists.txt  test_dtb.c
tests/elf/: CMakeLists.txt  hello.out  test_elf.c
tests/example/: CMakeLists.txt  foo.c  test_foo.c
tests/fs/: CMakeLists.txt  newc.cpio  test_fs.c
tests/mm/: CMakeLists.txt  stub.c  test_buddy_and_slab.c
tests/object/: CMakeLists.txt  minunit_local.h  stub.c  test_capability.c  test_object.c  test_object.h
tests/object/include/arch/: sync.h
tests/object/include/common/: lock.h
tests/object/include/mm/: mm.h
tests/object/include/posix/: time.h
user/: .gitignore  CMakeLists.txt  binary_include.S
user/apps/: CMakeLists.txt  assert.c  cat.c  client.c  diff.c  eventfd.c  hello.c  hello_libc.c  init.c  irq.c  multicast.c  pipe.c  server.c  timerfd.c  timerfd_epoll.c  ttcp.c
user/apps/perf/: CMakeLists.txt  perf.h  perf_cs.c  perf_ipc.c  perf_ipc_server.c  perf_syscall.c
user/apps/sqlite/: CMakeLists.txt  main.c
user/apps/tests/: CMakeLists.txt  poll_client.c  poll_server.c  test_argv.c  test_eventfd.c  test_fpu.c  test_fs.c  test_malloc.c  test_net_client.c  test_net_server.c  test_notifc.c  test_poll.c  test_pthread.c  test_sched.c  test_sleep.c  test_time.c  tests.h
user/apps/tests/fsstress/: fsstress.c  global.h
user/drivers/: CMakeLists.txt  config.cmake  devtree.c  devtree.h  driver_hub.c  dtb.c
user/drivers/ufs/: CMakeLists.txt  remap2h.py  ufs-bitfields.gen.h  ufs.bitfields  ufs.c  ufs_common.h  ufscmd.c  ufshci.c  ufshci.h  ufsutp.c  ufsutp.h
user/drivers/ufs/linux-port/: Makefile  bridge.h  findbit.S  main.c  ufs.h  ufshcd.c  ufshcd.h  ufshci.h
user/drivers/ufs/linux-port/arm64/: barrier.h  io.h
user/drivers/ufs/linux-port/linux/: scatterlist.h
user/drivers/ufs/linux-port/scsi/: scsi.h  scsi_bsg_ufs.h  scsi_cmnd.h  scsi_common.h  scsi_device.h  scsi_host.h  scsi_proto.h  scsi_request.h
user/dynamic_apps/: CMakeLists.txt  foo.c  hello_dl.c  hello_world.c  test_ipc.c  test_ipc_server.c
user/fsm/: CMakeLists.txt  common.c  common.h  defs.h  fsm.c  fsm.h  ops.c  ops.h
user/lwip/: CMakeLists.txt  main.c  tcpip_example.c
user/lwip/ports/chos/: debug_flags.c  sys_arch.c
user/lwip/ports/chos/include/: lwipopts.h
user/lwip/ports/chos/include/arch/: cc.h  sys_arch.h
user/lwip/src/api/: sockets.c  tcpip.c
user/lwip/src/core/: tcp.c
user/lwip/src/include/lwip/: arch.h  sockets.h
user/musl-1.1.24/: Makefile  configure
user/musl-1.1.24/arch/aarch64/: debug_lock.h  syscall_arch.h
user/musl-1.1.24/arch/x86_64/: debug_lock.h  syscall_arch.h
user/musl-1.1.24/include/: alltypes.h.in  limits.h  pthread.h
user/musl-1.1.24/include/chcore/: bug.h  cpio.h  defs.h  elf.h  errno.h  error.h  falloc.h  fs_defs.h  idman.h  ipc.h  launch_kern.h  launcher.h  lwip_defs.h  pmu.h  proc.h  procmgr_defs.h  syscall.h  thread.h  type.h
user/musl-1.1.24/include/chcore/container/: hashtable.h  list.h  radix.h
user/musl-1.1.24/include/netinet/: in.h
user/musl-1.1.24/include/sys/: socket.h
user/musl-1.1.24/ldso/: dlstart.c  dynlink.c
user/musl-1.1.24/src/chcore-port/: CMakeLists.txt  cpio.c  elf.c  eventfd.c  eventfd.h  fd.c  fd.h  file.c  file.h  futex.c  futex.h  ipc.c  launch_kern.c  liblauncher.c  pipe.c  pipe.h  poll.c  poll.h  socket.c  socket.h  spawn.c  stdio.c  syscall.c  syscall_dispatcher.c  thread.c  timerfd.c  timerfd.h
user/musl-1.1.24/src/env/: __libc_start_main.c
user/musl-1.1.24/src/exit/: _Exit.c
user/musl-1.1.24/src/fcntl/: open.c
user/musl-1.1.24/src/internal/: pthread_impl.h
user/musl-1.1.24/src/linux/: epoll.c
user/musl-1.1.24/src/malloc/: malloc.c
user/musl-1.1.24/src/misc/: uname.c
user/musl-1.1.24/src/mman/: mmap.c
user/musl-1.1.24/src/network/: getifaddrs.c
user/musl-1.1.24/src/process/: waitpid.c
user/musl-1.1.24/src/sched/: affinity.c  sched_yield.c
user/musl-1.1.24/src/stdio/: __lockfile.c
user/musl-1.1.24/src/thread/: __timedwait.c  pthread_cancel.c  pthread_create.c  pthread_join.c
user/musl-1.1.24/src/thread/x86_64/: __set_thread_area.s  set_thread_area.c
user/musl-1.1.24/src/unistd/: close.c
user/procmgr/: CMakeLists.txt  procmgr.c  procmgr.h  recycle.c
user/tmpfs/: CMakeLists.txt  README  defs.h  tmpfs.c  tmpfs.h  util.c  util.h
(+135 files in other folders)
